--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="index.js"></script>
   </head>
   <body>
     <div class="flex-container">
