Modify location of script

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
     <title>JS Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
-
-    <script type="module" src="index.js"></script>
   </head>
   <body>
     <div class="flex-container">
@@ -40,5 +38,6 @@
         </div>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
