Change divide png to svg

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,14 @@
           <button type="button" name="clean">C</button>
           <button type="button" name="negate">+/-</button>
           <button type="button" name="percent"></button>
-          <button type="button" name="divide"></button>
+          <button type="button" name="divide">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42">
+              <defs />
+              <path
+                d="M0 19h42v4H0zM21 13c2.757 0 5-2.243 5-5s-2.243-5-5-5-5 2.243-5 5 2.243 5 5 5zM21 29c-2.757 0-5 2.243-5 5s2.243 5 5 5 5-2.243 5-5-2.243-5-5-5z"
+              />
+            </svg>
+          </button>
           <button type="button" name="seven">7</button>
           <button type="button" name="eight">8</button>
           <button type="button" name="nine">9</button>
