Add accesibility attributes

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -17,7 +17,7 @@
         </div>
         <div id="keypad">
           <button type="button" name="clean">C</button>
-          <button type="button" name="negate">
+          <button type="button" name="negate" aria-label="Negate">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 141.293 141.293"
@@ -28,7 +28,7 @@
               />
             </svg>
           </button>
-          <button type="button" name="percent">
+          <button type="button" name="percent" aria-label="Percent">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <defs />
               <path
@@ -36,7 +36,7 @@
               />
             </svg>
           </button>
-          <button type="button" name="divide">
+          <button type="button" name="divide" aria-label="Divide">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42">
               <defs />
               <path
@@ -47,7 +47,7 @@
           <button type="button" name="seven">7</button>
           <button type="button" name="eight">8</button>
           <button type="button" name="nine">9</button>
-          <button type="button" name="multiply">
+          <button type="button" name="multiply" aria-label="Multiply">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="105.93 105.93 271.53 271.53"
@@ -61,7 +61,7 @@
           <button type="button" name="four">4</button>
           <button type="button" name="five">5</button>
           <button type="button" name="six">6</button>
-          <button type="button" name="subtract">
+          <button type="button" name="subtract" aria-label="Subtract">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 298.667 298.667"
@@ -73,7 +73,7 @@
           <button type="button" name="one">1</button>
           <button type="button" name="two">2</button>
           <button type="button" name="three">3</button>
-          <button type="button" name="sum">
+          <button type="button" name="sum" aria-label="Sum">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 341.4 341.4">
               <defs />
               <path
@@ -83,7 +83,7 @@
           </button>
           <button type="button" name="zero">0</button>
           <button type="button" name="point">·</button>
-          <button type="button" name="equals">
+          <button type="button" name="equals" aria-label="Equal">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 341.333 341.333"
