--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>JS Calculator</title>
+    <title>🔢 calculator</title>
+    <meta name="description" content="Calculator made in HTML, Grid CSS, Vanilla JS and given accesibility and performance in mind"/>
+    <meta name="keywords" content="calculator, vanillajs, accesibility, performance"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
   </head>
