--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>🔢 calculator</title>
-    <meta name="description" content="Calculator made in HTML, Grid CSS, Vanilla JS and given accesibility and performance in mind"/>
-    <meta name="keywords" content="calculator, vanillajs, accesibility, performance"/>
+    <title>Calculator</title>
+    <meta
+      name="description"
+      content="Calculator made in HTML, Grid CSS, Vanilla JS and given accesibility and performance in mind"
+    />
+    <meta
+      name="keywords"
+      content="calculator, vanillajs, accesibility, performance"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔢</text></svg>"
+    />
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
