--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="calculator">
+    <main id="calculator">
       <div class="panel">
         <div id="display">
           <span>0</span>
@@ -96,7 +96,7 @@
           </svg>
         </button>
       </div>
-    </div>
+    </main>
 
     <script src="index.js"></script>
   </body>
