--- a/src/index.html
+++ b/src/index.html
@@ -153,8 +153,8 @@
         </div>
       </div>
       <div id="keypad">
-        <button type="button" name="clean">C</button>
-        <button type="button" name="negate" aria-label="Negate">
+        <button name="clean" aria-label="clean">C</button>
+        <button name="negate" aria-label="negate">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 141.293 141.293">
             <defs />
             <path
@@ -162,7 +162,7 @@
             />
           </svg>
         </button>
-        <button type="button" name="percent" aria-label="Percent">
+        <button name="percent" aria-label="percent">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <defs />
             <path
@@ -170,7 +170,7 @@
             />
           </svg>
         </button>
-        <button type="button" name="divide" aria-label="Divide">
+        <button name="divide" aria-label="divide">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42">
             <defs />
             <path
@@ -178,10 +178,10 @@
             />
           </svg>
         </button>
-        <button type="button" name="seven">7</button>
-        <button type="button" name="eight">8</button>
-        <button type="button" name="nine">9</button>
-        <button type="button" name="multiply" aria-label="Multiply">
+        <button name="seven">7</button>
+        <button name="eight">8</button>
+        <button name="nine">9</button>
+        <button name="multiply" aria-label="multiply">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="105.93 105.93 271.53 271.53"
@@ -192,19 +192,19 @@
             ></path>
           </svg>
         </button>
-        <button type="button" name="four">4</button>
-        <button type="button" name="five">5</button>
-        <button type="button" name="six">6</button>
-        <button type="button" name="subtract" aria-label="Subtract">
+        <button name="four">4</button>
+        <button name="five">5</button>
+        <button name="six">6</button>
+        <button name="subtract" aria-label="subtract">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 298.667 298.667">
             <defs />
             <path d="M0 128h298.667v42.667H0z" />
           </svg>
         </button>
-        <button type="button" name="one">1</button>
-        <button type="button" name="two">2</button>
-        <button type="button" name="three">3</button>
-        <button type="button" name="sum" aria-label="Sum">
+        <button name="one">1</button>
+        <button name="two">2</button>
+        <button name="three">3</button>
+        <button name="sum" aria-label="sum">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 341.4 341.4">
             <defs />
             <path
@@ -212,9 +212,9 @@
             />
           </svg>
         </button>
-        <button type="button" name="zero">0</button>
-        <button type="button" name="point">·</button>
-        <button type="button" name="equals" aria-label="Equal">
+        <button name="zero">0</button>
+        <button name="point">·</button>
+        <button name="equals" aria-label="equal">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 341.333 341.333">
             <defs />
             <path d="M0 192h341.333v42.667H0zM0 106.667h341.333v42.667H0z" />
