Add testid attribute for display value

--- a/src/index.html
+++ b/src/index.html
@@ -149,7 +149,7 @@
     <main id="calculator">
       <div class="panel">
         <div id="display">
-          <span>0</span>
+          <span data-testid="value">0</span>
         </div>
       </div>
       <div id="keypad">
