Add render working with external script resource

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,6 @@
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔢</text></svg>"
     />
-
     <style>
       @font-face {
         font-family: "Open Sans";
@@ -222,7 +221,6 @@
         </button>
       </div>
     </main>
-
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
